--- a/index.html
+++ b/index.html
@@ -439,6 +439,10 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 <div id="projects" class="container">
   <h3 class="text-center">Projects</h3> 
 
+<p style="text-align:left"><b>Fountain Pen Ink Analysis & Visualization</b> | A quantitative analysis of over 500 fountain pen inks using over 15,000 user-provided reviews from [The Goulet Pen Company](https://www.gouletpens.com/).<br />
+<a href="https://asantone.github.io/ink/" target="_blank">The Goulet Pen Company Ink Analysis</a>
+</p>	
+	
 <p style="text-align:left"><b>Modules for 14.310x</b> | Data Analysis for Social Scientists<br /> 
 <ul>
   <li><a href="notebook01.html" target="_blank">Module 01: Part 1</a>: Bar Charts & Leaflet Maps</li>
