--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 <div id="projects" class="container">
   <h3 class="text-center">Projects</h3> 
 
-<p style="text-align:left"><b>Fountain Pen Ink Analysis & Visualization</b> | A quantitative analysis of over 500 fountain pen inks using over 15,000 user-provided reviews from [The Goulet Pen Company](https://www.gouletpens.com/).<br />
-<a href="https://asantone.github.io/ink/" target="_blank">The Goulet Pen Company Ink Analysis</a>
+<p style="text-align:left"><b>Fountain Pen Ink Analysis & Visualization</b> | Independent Data-driven Quantiative Analysis <br />
+<a href="https://asantone.github.io/ink/" target="_blank">The Goulet Pen Company Ink Analysis</a> represents a quantitative analysis of over 500 fountain pen inks using over 15,000 user-provided reviews from <a href="https://www.gouletpens.com/" target="_blank">The Goulet Pen Company.
 </p>	
 	
 <p style="text-align:left"><b>Modules for 14.310x</b> | Data Analysis for Social Scientists<br /> 
