--- a/biobuilder/lm/modules/recoveredSandbox.html
+++ b/biobuilder/lm/modules/recoveredSandbox.html
@@ -20,7 +20,7 @@ colors <- c("confirmed" = "#000000", "deaths" = "#000000", "recovered" = "#ff000
 library(ggplot2)
 	     
 #load the confirmed data
-confirmed = read.csv("/data/confirmed.csv")
+confirmed = read.csv("./data/confirmed.csv")
 hubei_confirmed<-as.data.frame(confirmed[13,5:ncol(confirmed)])
 hubei_confirmed<-as_tibble(cbind(date = names(hubei_confirmed), t(hubei_confirmed)))
 head(hubei_confirmed)
@@ -34,7 +34,7 @@ hubei_confirmed$confirmed <- as.numeric(hubei_confirmed$confirmed)
 head(hubei_confirmed)
 
 #load the deaths data
-deaths = read.csv("/data/deaths.csv")
+deaths = read.csv("./data/deaths.csv")
 hubei_deaths<-as.data.frame(deaths[13,5:ncol(deaths)])
 hubei_deaths<-as_tibble(cbind(date = names(hubei_deaths), t(hubei_deaths)))
 colnames(hubei_deaths)<-c("date", "deaths")
@@ -45,7 +45,7 @@ hubei_deaths$deaths <- as.numeric(hubei_deaths$deaths)
 head(hubei_deaths)
 
 #load the recovered data
-recovered = read.csv("/data/recovered.csv")
+recovered = read.csv("./data/recovered.csv")
 hubei_recovered<-as.data.frame(recovered[13,5:ncol(recovered)])
 hubei_recovered<-as_tibble(cbind(date = names(hubei_recovered), t(hubei_recovered)))
 colnames(hubei_recovered)<-c("date", "recovered")
