--- a/biobuilder/lm/modules/interactivePlot.html
+++ b/biobuilder/lm/modules/interactivePlot.html
@@ -11,7 +11,7 @@
 #======================================
 #========= EDIT THESE VALUES ==========
 #======================================
-colors <- c("confirmed" = "#000000", "deaths" = "#000000", "recovered" = "#ff0000")
+colors <- c("virusA" = "#34b7eb", "virusB" = "#bf8c15")
 	   	   
 #======================================
 # === THE CODE BELOW IS READY TO GO ===
@@ -26,24 +26,29 @@ library(stringr)
 library(readr)
 	     
 #load the data
-joinedHubei = read_csv("https://asantone.github.io/biobuilder/lm/modules/data/hubei_tibble.csv")
 
-head(joinedHubei)
+#timeline
+week<-c(1,2,3,4,5,6,7,8,9,10)
 
-ggplot(joinedHubei, aes(x=date)) + 
-  geom_line(aes(y = confirmed, color="confirmed"), linetype="dotted") +
-  geom_line(aes(y = deaths,    color="deaths"   ), linetype="solid")    +
-  geom_line(aes(y = recovered, color="recovered"), linetype="solid") +
+#infections from virus type A and type B
+virusA<-c(0,1,1,4,5,8,18,23,96,137)
+virusB<-c(0,1,5,8,27,36,95,133,201,288)
+
+data<-tibble("week" = weeks, "virusA" = virusA, "virusB" = virusB)
+
+head(data)
+
+ggplot(data, aes(x=week)) + 
+  geom_line(aes(y = virusA, color="virusA"), linetype="solid") +
+  geom_line(aes(y = virusB, color="virusB"), linetype="solid")    +
   theme_minimal()+
   labs(x = "Date",
-       y = "Number of Cases",
+       y = "Number of Infections",
        color = "Legend") +
-  ggtitle("Confirmed Cases, Deaths, and Recoveries from COVID-19 (Hubei, 2019)")+
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))+
-  scale_x_date(date_breaks = "2 days", date_labels = "%F")+
-  scale_color_manual(values = colors)
-
-		
+  ggtitle("Infection Count from Virus A and Virus B over 10 weeks")+
+  theme(axis.text.x = element_text(angle = 0, hjust = 1))+
+  scale_color_manual(values = colors)+
+  scale_x_continuous(breaks=seq(1, 10, 1))		
 </code>
 
 <div data-type="hint">Change the variable values to your own measured values.</div>
