--- a/biobuilder/lm/modules/interactivePlot.html
+++ b/biobuilder/lm/modules/interactivePlot.html
@@ -34,7 +34,7 @@ week<-c(1,2,3,4,5,6,7,8,9,10)
 virusA<-c(0,1,1,4,5,8,18,23,96,137)
 virusB<-c(0,1,5,8,27,36,95,133,201,288)
 
-data<-tibble("week" = weeks, "virusA" = virusA, "virusB" = virusB)
+data<-tibble("week" = week, "virusA" = virusA, "virusB" = virusB)
 
 head(data)
 
