--- a/biobuilder/lm/modules/interactive-learning.html
+++ b/biobuilder/lm/modules/interactive-learning.html
@@ -156,7 +156,7 @@ Figure 4.1: A. Santone
 </div>
 <div id="choosing-colors" class="section level2">
 <h2><span class="header-section-number">4.2</span> Choosing Colors</h2>
-<p>You can search “color chooser” in the Google Browser to find <a href="https://www.google.com/search?q=color+chooser&amp;oq=color+chooser&amp;aqs=chrome.0.35i39j0l7.1555j0j4&amp;sourceid=chrome&amp;ie=UTF-8">this tool</a>, but you can also select from many other tools to find a hexadecimal code such as #FF0000, which ecodes the color red.</p>
+<p>You can search “color chooser” in the Google Browser to find <a href="https://www.google.com/search?q=color+chooser&amp;oq=color+chooser&amp;aqs=chrome.0.35i39j0l7.1555j0j4&amp;sourceid=chrome&amp;ie=UTF-8">this tool</a>, but you can also select from many other tools to find a hexadecimal code such as #FF0000, which encodes the color red.</p>
 </div>
 <div id="line-plot" class="section level2">
 <h2><span class="header-section-number">4.3</span> Line Plot</h2>
