--- a/biobuilder/lm/modules/quantitative-analysis.html
+++ b/biobuilder/lm/modules/quantitative-analysis.html
@@ -256,8 +256,10 @@ Figure 1.1: Credit: Unknown
 <h3><span class="header-section-number">1.5.1</span> Color Palettes</h3>
 <p>Choosing the right colors can make your data visualization stand out in either a good or very bad way. In your role as a designer, you should choose colors that enhance learning. Here is <a href="https://cran.r-project.org/web/packages/viridis/vignettes/intro-to-viridis.html">an article on effective color palettes</a> that can be used with R.</p>
 <blockquote>
-<p>What did you learn about quantitative analysis?
-What else do you want to know about quantitative analysis?</p>
+<p>What did you learn about quantitative analysis?</p>
+</blockquote>
+<blockquote>
+<p>What else do you want to know about quantitative analysis?</p>
 </blockquote>
 
 </div>
