--- a/biobuilder/lm/modules/interactivePlot4.html
+++ b/biobuilder/lm/modules/interactivePlot4.html
@@ -9,6 +9,7 @@
 <code data-type="sample-code">
 library(ggplot2)
 library(tibble)	
+library(dplyr)
 
 #simulated group data
 #data are sampled from a normal distribution
