--- a/biobuilder/lm/modules/index.html
+++ b/biobuilder/lm/modules/index.html
@@ -96,28 +96,32 @@
 <li class="chapter" data-level="2.4" data-path="r.html"><a href="r.html#whats-next-for-r"><i class="fa fa-check"></i><b>2.4</b> What’s next for R?</a></li>
 <li class="chapter" data-level="2.5" data-path="r.html"><a href="r.html#what-else-can-r-do-besides-calculations-and-some-plots"><i class="fa fa-check"></i><b>2.5</b> What else can R do besides calculations and some plots?</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="covid-19.html"><a href="covid-19.html"><i class="fa fa-check"></i><b>3</b> COVID-19</a><ul>
-<li class="chapter" data-level="3.1" data-path="covid-19.html"><a href="covid-19.html#background"><i class="fa fa-check"></i><b>3.1</b> Background</a></li>
-<li class="chapter" data-level="3.2" data-path="covid-19.html"><a href="covid-19.html#sequence"><i class="fa fa-check"></i><b>3.2</b> Sequence</a></li>
-<li class="chapter" data-level="3.3" data-path="covid-19.html"><a href="covid-19.html#learning-resources"><i class="fa fa-check"></i><b>3.3</b> Learning Resources</a><ul>
-<li class="chapter" data-level="3.3.1" data-path="covid-19.html"><a href="covid-19.html#who"><i class="fa fa-check"></i><b>3.3.1</b> WHO</a></li>
-<li class="chapter" data-level="3.3.2" data-path="covid-19.html"><a href="covid-19.html#jhu"><i class="fa fa-check"></i><b>3.3.2</b> JHU</a></li>
-<li class="chapter" data-level="3.3.3" data-path="covid-19.html"><a href="covid-19.html#ut"><i class="fa fa-check"></i><b>3.3.3</b> UT</a></li>
-<li class="chapter" data-level="3.3.4" data-path="covid-19.html"><a href="covid-19.html#national-institutes-of-health"><i class="fa fa-check"></i><b>3.3.4</b> National Institutes of Health</a></li>
+<li class="chapter" data-level="3" data-path="basic-statistics.html"><a href="basic-statistics.html"><i class="fa fa-check"></i><b>3</b> Basic Statistics</a><ul>
+<li class="chapter" data-level="3.1" data-path="basic-statistics.html"><a href="basic-statistics.html#the-t-test"><i class="fa fa-check"></i><b>3.1</b> The T-Test</a></li>
 </ul></li>
-<li class="chapter" data-level="3.4" data-path="covid-19.html"><a href="covid-19.html#sequence-analysis"><i class="fa fa-check"></i><b>3.4</b> Sequence Analysis</a><ul>
-<li class="chapter" data-level="3.4.1" data-path="covid-19.html"><a href="covid-19.html#gc-content"><i class="fa fa-check"></i><b>3.4.1</b> GC Content</a></li>
+<li class="chapter" data-level="4" data-path="covid-19.html"><a href="covid-19.html"><i class="fa fa-check"></i><b>4</b> COVID-19</a><ul>
+<li class="chapter" data-level="4.1" data-path="covid-19.html"><a href="covid-19.html#background"><i class="fa fa-check"></i><b>4.1</b> Background</a></li>
+<li class="chapter" data-level="4.2" data-path="covid-19.html"><a href="covid-19.html#sequence"><i class="fa fa-check"></i><b>4.2</b> Sequence</a></li>
+<li class="chapter" data-level="4.3" data-path="covid-19.html"><a href="covid-19.html#learning-resources"><i class="fa fa-check"></i><b>4.3</b> Learning Resources</a><ul>
+<li class="chapter" data-level="4.3.1" data-path="covid-19.html"><a href="covid-19.html#who"><i class="fa fa-check"></i><b>4.3.1</b> WHO</a></li>
+<li class="chapter" data-level="4.3.2" data-path="covid-19.html"><a href="covid-19.html#jhu"><i class="fa fa-check"></i><b>4.3.2</b> JHU</a></li>
+<li class="chapter" data-level="4.3.3" data-path="covid-19.html"><a href="covid-19.html#ut"><i class="fa fa-check"></i><b>4.3.3</b> UT</a></li>
+<li class="chapter" data-level="4.3.4" data-path="covid-19.html"><a href="covid-19.html#national-institutes-of-health"><i class="fa fa-check"></i><b>4.3.4</b> National Institutes of Health</a></li>
+</ul></li>
+<li class="chapter" data-level="4.4" data-path="covid-19.html"><a href="covid-19.html#sequence-analysis"><i class="fa fa-check"></i><b>4.4</b> Sequence Analysis</a><ul>
+<li class="chapter" data-level="4.4.1" data-path="covid-19.html"><a href="covid-19.html#gc-content"><i class="fa fa-check"></i><b>4.4.1</b> GC Content</a></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="4" data-path="interactive-learning.html"><a href="interactive-learning.html"><i class="fa fa-check"></i><b>4</b> Interactive Learning</a><ul>
-<li class="chapter" data-level="4.1" data-path="interactive-learning.html"><a href="interactive-learning.html#codeshare"><i class="fa fa-check"></i><b>4.1</b> Codeshare</a></li>
-<li class="chapter" data-level="4.2" data-path="interactive-learning.html"><a href="interactive-learning.html#choosing-colors"><i class="fa fa-check"></i><b>4.2</b> Choosing Colors</a></li>
-<li class="chapter" data-level="4.3" data-path="interactive-learning.html"><a href="interactive-learning.html#line-plot"><i class="fa fa-check"></i><b>4.3</b> Line Plot</a></li>
-<li class="chapter" data-level="4.4" data-path="interactive-learning.html"><a href="interactive-learning.html#bar-chart"><i class="fa fa-check"></i><b>4.4</b> Bar Chart</a></li>
-<li class="chapter" data-level="4.5" data-path="interactive-learning.html"><a href="interactive-learning.html#scatter-plots"><i class="fa fa-check"></i><b>4.5</b> Scatter Plots</a></li>
-<li class="chapter" data-level="4.6" data-path="interactive-learning.html"><a href="interactive-learning.html#build-your-own"><i class="fa fa-check"></i><b>4.6</b> Build your own!</a><ul>
-<li class="chapter" data-level="4.6.1" data-path="interactive-learning.html"><a href="interactive-learning.html#word-problem"><i class="fa fa-check"></i><b>4.6.1</b> Word problem</a></li>
-<li class="chapter" data-level="4.6.2" data-path="interactive-learning.html"><a href="interactive-learning.html#guiding-questions"><i class="fa fa-check"></i><b>4.6.2</b> Guiding questions:</a></li>
+<li class="chapter" data-level="5" data-path="interactive-learning.html"><a href="interactive-learning.html"><i class="fa fa-check"></i><b>5</b> Interactive Learning</a><ul>
+<li class="chapter" data-level="5.1" data-path="interactive-learning.html"><a href="interactive-learning.html#codeshare"><i class="fa fa-check"></i><b>5.1</b> Codeshare</a></li>
+<li class="chapter" data-level="5.2" data-path="interactive-learning.html"><a href="interactive-learning.html#choosing-colors"><i class="fa fa-check"></i><b>5.2</b> Choosing Colors</a></li>
+<li class="chapter" data-level="5.3" data-path="interactive-learning.html"><a href="interactive-learning.html#line-plot"><i class="fa fa-check"></i><b>5.3</b> Line Plot</a></li>
+<li class="chapter" data-level="5.4" data-path="interactive-learning.html"><a href="interactive-learning.html#bar-chart"><i class="fa fa-check"></i><b>5.4</b> Bar Chart</a></li>
+<li class="chapter" data-level="5.5" data-path="interactive-learning.html"><a href="interactive-learning.html#scatter-plots"><i class="fa fa-check"></i><b>5.5</b> Scatter Plots</a></li>
+<li class="chapter" data-level="5.6" data-path="interactive-learning.html"><a href="interactive-learning.html#box-plots"><i class="fa fa-check"></i><b>5.6</b> Box Plots</a></li>
+<li class="chapter" data-level="5.7" data-path="interactive-learning.html"><a href="interactive-learning.html#build-your-own"><i class="fa fa-check"></i><b>5.7</b> Build your own!</a><ul>
+<li class="chapter" data-level="5.7.1" data-path="interactive-learning.html"><a href="interactive-learning.html#word-problem"><i class="fa fa-check"></i><b>5.7.1</b> Word problem</a></li>
+<li class="chapter" data-level="5.7.2" data-path="interactive-learning.html"><a href="interactive-learning.html#guiding-questions"><i class="fa fa-check"></i><b>5.7.2</b> Guiding questions:</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
