--- a/biobuilder/lm/modules/references.html
+++ b/biobuilder/lm/modules/references.html
@@ -24,14 +24,14 @@
 <meta name="author" content="Adam Santone, PhD" />
 
 
-<meta name="date" content="2020-02-25" />
+<meta name="date" content="2020-03-02" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   
-<link rel="prev" href="sequence-analysis.html"/>
+<link rel="prev" href="interactive-learning.html"/>
 
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -80,37 +80,49 @@
 </ul></li>
 <li class="chapter" data-level="1.3" data-path="quantitative-analysis.html"><a href="quantitative-analysis.html#storytelling"><i class="fa fa-check"></i><b>1.3</b> Storytelling</a></li>
 <li class="chapter" data-level="1.4" data-path="quantitative-analysis.html"><a href="quantitative-analysis.html#methods"><i class="fa fa-check"></i><b>1.4</b> Methods</a><ul>
-<li class="chapter" data-level="1.4.1" data-path="quantitative-analysis.html"><a href="quantitative-analysis.html#visualization"><i class="fa fa-check"></i><b>1.4.1</b> Visualization</a></li>
-<li class="chapter" data-level="1.4.2" data-path="quantitative-analysis.html"><a href="quantitative-analysis.html#sonification"><i class="fa fa-check"></i><b>1.4.2</b> Sonification</a></li>
-<li class="chapter" data-level="1.4.3" data-path="quantitative-analysis.html"><a href="quantitative-analysis.html#dashboards"><i class="fa fa-check"></i><b>1.4.3</b> Dashboards</a></li>
+<li class="chapter" data-level="1.4.1" data-path="quantitative-analysis.html"><a href="quantitative-analysis.html#statistics"><i class="fa fa-check"></i><b>1.4.1</b> Statistics</a></li>
+<li class="chapter" data-level="1.4.2" data-path="quantitative-analysis.html"><a href="quantitative-analysis.html#visualization"><i class="fa fa-check"></i><b>1.4.2</b> Visualization</a></li>
+<li class="chapter" data-level="1.4.3" data-path="quantitative-analysis.html"><a href="quantitative-analysis.html#sonification"><i class="fa fa-check"></i><b>1.4.3</b> Sonification</a></li>
+<li class="chapter" data-level="1.4.4" data-path="quantitative-analysis.html"><a href="quantitative-analysis.html#dashboards"><i class="fa fa-check"></i><b>1.4.4</b> Dashboards</a></li>
 </ul></li>
-<li class="chapter" data-level="1.5" data-path="quantitative-analysis.html"><a href="quantitative-analysis.html#art-and-design"><i class="fa fa-check"></i><b>1.5</b> Art and Design</a></li>
+<li class="chapter" data-level="1.5" data-path="quantitative-analysis.html"><a href="quantitative-analysis.html#art-and-design"><i class="fa fa-check"></i><b>1.5</b> Art and Design</a><ul>
+<li class="chapter" data-level="1.5.1" data-path="quantitative-analysis.html"><a href="quantitative-analysis.html#color-palettes"><i class="fa fa-check"></i><b>1.5.1</b> Color Palettes</a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="r.html"><a href="r.html"><i class="fa fa-check"></i><b>2</b> R</a><ul>
 <li class="chapter" data-level="2.1" data-path="r.html"><a href="r.html#r-overview"><i class="fa fa-check"></i><b>2.1</b> R Overview</a></li>
 <li class="chapter" data-level="2.2" data-path="r.html"><a href="r.html#rstudio"><i class="fa fa-check"></i><b>2.2</b> RStudio</a></li>
+<li class="chapter" data-level="2.3" data-path="r.html"><a href="r.html#why-use-r"><i class="fa fa-check"></i><b>2.3</b> Why use R?</a></li>
+<li class="chapter" data-level="2.4" data-path="r.html"><a href="r.html#whats-next-for-r"><i class="fa fa-check"></i><b>2.4</b> What’s next for R?</a></li>
+<li class="chapter" data-level="2.5" data-path="r.html"><a href="r.html#what-else-can-r-do-besides-calculations-and-some-plots"><i class="fa fa-check"></i><b>2.5</b> What else can R do besides calculations and some plots?</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="covid-19.html"><a href="covid-19.html"><i class="fa fa-check"></i><b>3</b> COVID-19</a><ul>
-<li class="chapter" data-level="3.1" data-path="covid-19.html"><a href="covid-19.html#background"><i class="fa fa-check"></i><b>3.1</b> Background</a></li>
-<li class="chapter" data-level="3.2" data-path="covid-19.html"><a href="covid-19.html#sequence"><i class="fa fa-check"></i><b>3.2</b> Sequence</a></li>
-<li class="chapter" data-level="3.3" data-path="covid-19.html"><a href="covid-19.html#learning-resources"><i class="fa fa-check"></i><b>3.3</b> Learning Resources</a><ul>
-<li class="chapter" data-level="3.3.1" data-path="covid-19.html"><a href="covid-19.html#who"><i class="fa fa-check"></i><b>3.3.1</b> WHO</a></li>
-<li class="chapter" data-level="3.3.2" data-path="covid-19.html"><a href="covid-19.html#jhu"><i class="fa fa-check"></i><b>3.3.2</b> JHU</a></li>
-<li class="chapter" data-level="3.3.3" data-path="covid-19.html"><a href="covid-19.html#ut"><i class="fa fa-check"></i><b>3.3.3</b> UT</a></li>
-<li class="chapter" data-level="3.3.4" data-path="covid-19.html"><a href="covid-19.html#national-institutes-of-health"><i class="fa fa-check"></i><b>3.3.4</b> National Institutes of Health</a></li>
+<li class="chapter" data-level="3" data-path="basic-statistics.html"><a href="basic-statistics.html"><i class="fa fa-check"></i><b>3</b> Basic Statistics</a><ul>
+<li class="chapter" data-level="3.1" data-path="basic-statistics.html"><a href="basic-statistics.html#the-t-test"><i class="fa fa-check"></i><b>3.1</b> The T-Test</a></li>
 </ul></li>
-<li class="chapter" data-level="3.4" data-path="covid-19.html"><a href="covid-19.html#analysis-goals"><i class="fa fa-check"></i><b>3.4</b> Analysis Goals</a><ul>
-<li class="chapter" data-level="3.4.1" data-path="covid-19.html"><a href="covid-19.html#gc-content"><i class="fa fa-check"></i><b>3.4.1</b> GC Content</a></li>
+<li class="chapter" data-level="4" data-path="covid-19.html"><a href="covid-19.html"><i class="fa fa-check"></i><b>4</b> COVID-19</a><ul>
+<li class="chapter" data-level="4.1" data-path="covid-19.html"><a href="covid-19.html#background"><i class="fa fa-check"></i><b>4.1</b> Background</a></li>
+<li class="chapter" data-level="4.2" data-path="covid-19.html"><a href="covid-19.html#sequence"><i class="fa fa-check"></i><b>4.2</b> Sequence</a></li>
+<li class="chapter" data-level="4.3" data-path="covid-19.html"><a href="covid-19.html#learning-resources"><i class="fa fa-check"></i><b>4.3</b> Learning Resources</a><ul>
+<li class="chapter" data-level="4.3.1" data-path="covid-19.html"><a href="covid-19.html#who"><i class="fa fa-check"></i><b>4.3.1</b> WHO</a></li>
+<li class="chapter" data-level="4.3.2" data-path="covid-19.html"><a href="covid-19.html#jhu"><i class="fa fa-check"></i><b>4.3.2</b> JHU</a></li>
+<li class="chapter" data-level="4.3.3" data-path="covid-19.html"><a href="covid-19.html#ut"><i class="fa fa-check"></i><b>4.3.3</b> UT</a></li>
+<li class="chapter" data-level="4.3.4" data-path="covid-19.html"><a href="covid-19.html#national-institutes-of-health"><i class="fa fa-check"></i><b>4.3.4</b> National Institutes of Health</a></li>
 </ul></li>
-<li class="chapter" data-level="3.5" data-path="covid-19.html"><a href="covid-19.html#global-trends"><i class="fa fa-check"></i><b>3.5</b> Global Trends</a><ul>
-<li class="chapter" data-level="3.5.1" data-path="covid-19.html"><a href="covid-19.html#confirmed-cases"><i class="fa fa-check"></i><b>3.5.1</b> Confirmed Cases</a></li>
-<li class="chapter" data-level="3.5.2" data-path="covid-19.html"><a href="covid-19.html#deaths"><i class="fa fa-check"></i><b>3.5.2</b> Deaths</a></li>
-<li class="chapter" data-level="3.5.3" data-path="covid-19.html"><a href="covid-19.html#recovered"><i class="fa fa-check"></i><b>3.5.3</b> Recovered</a></li>
+<li class="chapter" data-level="4.4" data-path="covid-19.html"><a href="covid-19.html#sequence-analysis"><i class="fa fa-check"></i><b>4.4</b> Sequence Analysis</a><ul>
+<li class="chapter" data-level="4.4.1" data-path="covid-19.html"><a href="covid-19.html#gc-content"><i class="fa fa-check"></i><b>4.4.1</b> GC Content</a></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="4" data-path="sequence-analysis.html"><a href="sequence-analysis.html"><i class="fa fa-check"></i><b>4</b> Sequence Analysis</a><ul>
-<li class="chapter" data-level="4.0.1" data-path="sequence-analysis.html"><a href="sequence-analysis.html#codons"><i class="fa fa-check"></i><b>4.0.1</b> Codons</a></li>
-<li class="chapter" data-level="4.0.2" data-path="sequence-analysis.html"><a href="sequence-analysis.html#counting-codons"><i class="fa fa-check"></i><b>4.0.2</b> Counting Codons</a></li>
+<li class="chapter" data-level="5" data-path="interactive-learning.html"><a href="interactive-learning.html"><i class="fa fa-check"></i><b>5</b> Interactive Learning</a><ul>
+<li class="chapter" data-level="5.1" data-path="interactive-learning.html"><a href="interactive-learning.html#codeshare"><i class="fa fa-check"></i><b>5.1</b> Codeshare</a></li>
+<li class="chapter" data-level="5.2" data-path="interactive-learning.html"><a href="interactive-learning.html#choosing-colors"><i class="fa fa-check"></i><b>5.2</b> Choosing Colors</a></li>
+<li class="chapter" data-level="5.3" data-path="interactive-learning.html"><a href="interactive-learning.html#line-plot"><i class="fa fa-check"></i><b>5.3</b> Line Plot</a></li>
+<li class="chapter" data-level="5.4" data-path="interactive-learning.html"><a href="interactive-learning.html#bar-chart"><i class="fa fa-check"></i><b>5.4</b> Bar Chart</a></li>
+<li class="chapter" data-level="5.5" data-path="interactive-learning.html"><a href="interactive-learning.html#scatter-plots"><i class="fa fa-check"></i><b>5.5</b> Scatter Plots</a></li>
+<li class="chapter" data-level="5.6" data-path="interactive-learning.html"><a href="interactive-learning.html#box-plots"><i class="fa fa-check"></i><b>5.6</b> Box Plots</a></li>
+<li class="chapter" data-level="5.7" data-path="interactive-learning.html"><a href="interactive-learning.html#build-your-own"><i class="fa fa-check"></i><b>5.7</b> Build your own!</a><ul>
+<li class="chapter" data-level="5.7.1" data-path="interactive-learning.html"><a href="interactive-learning.html#word-problem"><i class="fa fa-check"></i><b>5.7.1</b> Word problem</a></li>
+<li class="chapter" data-level="5.7.2" data-path="interactive-learning.html"><a href="interactive-learning.html#guiding-questions"><i class="fa fa-check"></i><b>5.7.2</b> Guiding questions:</a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
@@ -136,27 +148,13 @@
 <div id="references" class="section level1 unnumbered">
 <h1>References</h1>
 
-<div id="refs" class="references">
-<div>
-<p>R-Project.org. 2020. “What is R?” <a href="https://www.r-project.org/about.html">https://www.r-project.org/about.html</a>.</p>
-</div>
-<div>
-<p>RStudio Team. 2015. <em>RStudio: Integrated Development Environment for R</em>. Boston, MA: RStudio, Inc. <a href="http://www.rstudio.com/">http://www.rstudio.com/</a>.</p>
-</div>
-<div>
-<p>Xie, Yihui. 2016. <em>Bookdown: Authoring Books and Technical Documents with R Markdown</em>. Boca Raton, Florida: Chapman; Hall/CRC. <a href="https://github.com/rstudio/bookdown">https://github.com/rstudio/bookdown</a>.</p>
-</div>
-<div>
-<p>———. 2020. <em>Bookdown: Authoring Books and Technical Documents with R Markdown</em>. <a href="https://github.com/rstudio/bookdown">https://github.com/rstudio/bookdown</a>.</p>
-</div>
-</div>
 </div>
             </section>
 
           </div>
         </div>
       </div>
-<a href="sequence-analysis.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="interactive-learning.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 
     </div>
   </div>
