--- a/biobuilder/lm/modules/interactive-learning.html
+++ b/biobuilder/lm/modules/interactive-learning.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Adam Santone, PhD" />
 
 
-<meta name="date" content="2020-02-27" />
+<meta name="date" content="2020-03-02" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -50,8 +50,73 @@
 
 
 
+<script src="libs/htmlwidgets-1.5.1/htmlwidgets.js"></script>
+<script src="libs/d3-4.5.0/d3.min.js"></script>
+<script src="libs/forceNetwork-binding-0.4/forceNetwork.js"></script>
 
 
+<style type="text/css">
+a.sourceLine { display: inline-block; line-height: 1.25; }
+a.sourceLine { pointer-events: none; color: inherit; text-decoration: inherit; }
+a.sourceLine:empty { height: 1.2em; }
+.sourceCode { overflow: visible; }
+code.sourceCode { white-space: pre; position: relative; }
+pre.sourceCode { margin: 0; }
+@media screen {
+div.sourceCode { overflow: auto; }
+}
+@media print {
+code.sourceCode { white-space: pre-wrap; }
+a.sourceLine { text-indent: -1em; padding-left: 1em; }
+}
+pre.numberSource a.sourceLine
+  { position: relative; left: -4em; }
+pre.numberSource a.sourceLine::before
+  { content: attr(title);
+    position: relative; left: -1em; text-align: right; vertical-align: baseline;
+    border: none; pointer-events: all; display: inline-block;
+    -webkit-touch-callout: none; -webkit-user-select: none;
+    -khtml-user-select: none; -moz-user-select: none;
+    -ms-user-select: none; user-select: none;
+    padding: 0 4px; width: 4em;
+    color: #aaaaaa;
+  }
+pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
+div.sourceCode
+  {  }
+@media screen {
+a.sourceLine::before { text-decoration: underline; }
+}
+code span.al { color: #ff0000; font-weight: bold; } /* Alert */
+code span.an { color: #60a0b0; font-weight: bold; font-style: italic; } /* Annotation */
+code span.at { color: #7d9029; } /* Attribute */
+code span.bn { color: #40a070; } /* BaseN */
+code span.bu { } /* BuiltIn */
+code span.cf { color: #007020; font-weight: bold; } /* ControlFlow */
+code span.ch { color: #4070a0; } /* Char */
+code span.cn { color: #880000; } /* Constant */
+code span.co { color: #60a0b0; font-style: italic; } /* Comment */
+code span.cv { color: #60a0b0; font-weight: bold; font-style: italic; } /* CommentVar */
+code span.do { color: #ba2121; font-style: italic; } /* Documentation */
+code span.dt { color: #902000; } /* DataType */
+code span.dv { color: #40a070; } /* DecVal */
+code span.er { color: #ff0000; font-weight: bold; } /* Error */
+code span.ex { } /* Extension */
+code span.fl { color: #40a070; } /* Float */
+code span.fu { color: #06287e; } /* Function */
+code span.im { } /* Import */
+code span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Information */
+code span.kw { color: #007020; font-weight: bold; } /* Keyword */
+code span.op { color: #666666; } /* Operator */
+code span.ot { color: #007020; } /* Other */
+code span.pp { color: #bc7a00; } /* Preprocessor */
+code span.sc { color: #4070a0; } /* SpecialChar */
+code span.ss { color: #bb6688; } /* SpecialString */
+code span.st { color: #4070a0; } /* String */
+code span.va { color: #19177c; } /* Variable */
+code span.vs { color: #4070a0; } /* VerbatimString */
+code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
+</style>
 
 <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
@@ -151,7 +216,7 @@
 <div id="codeshare" class="section level2">
 <h2><span class="header-section-number">5.1</span> Codeshare</h2>
 <p>Open this link and keep it for this portion of the talk so we can share some code with each other: <a href="https://codeshare.io/a3Q19z">codeshare</a>.</p>
-<div class="figure"><span id="fig:unnamed-chunk-1"></span>
+<div class="figure"><span id="fig:unnamed-chunk-13"></span>
 <img src="img/codeshare.png" alt="A. Santone" width="100%" />
 <p class="caption">
 Figure 5.1: A. Santone
@@ -164,7 +229,7 @@ Figure 5.1: A. Santone
 </div>
 <div id="line-plot" class="section level2">
 <h2><span class="header-section-number">5.3</span> Line Plot</h2>
-<div class="figure"><span id="fig:unnamed-chunk-2"></span>
+<div class="figure"><span id="fig:unnamed-chunk-14"></span>
 <img src="img/line.png" alt="Credit: A. Santone" width="100%" />
 <p class="caption">
 Figure 5.2: Credit: A. Santone
@@ -185,7 +250,7 @@ Figure 5.2: Credit: A. Santone
 </div>
 <div id="bar-chart" class="section level2">
 <h2><span class="header-section-number">5.4</span> Bar Chart</h2>
-<div class="figure"><span id="fig:unnamed-chunk-3"></span>
+<div class="figure"><span id="fig:unnamed-chunk-15"></span>
 <img src="img/bar.png" alt="Credit: A. Santone" width="100%" />
 <p class="caption">
 Figure 5.3: Credit: A. Santone
@@ -207,7 +272,7 @@ Figure 5.3: Credit: A. Santone
 </div>
 <div id="scatter-plots" class="section level2">
 <h2><span class="header-section-number">5.5</span> Scatter Plots</h2>
-<div class="figure"><span id="fig:unnamed-chunk-4"></span>
+<div class="figure"><span id="fig:unnamed-chunk-16"></span>
 <img src="img/scatter.png" alt="Credit: A. Santone" width="100%" />
 <p class="caption">
 Figure 5.4: Credit: A. Santone
@@ -227,7 +292,7 @@ Figure 5.4: Credit: A. Santone
 </div>
 <div id="box-plots" class="section level2">
 <h2><span class="header-section-number">5.6</span> Box Plots</h2>
-<div class="figure"><span id="fig:unnamed-chunk-5"></span>
+<div class="figure"><span id="fig:unnamed-chunk-17"></span>
 <img src="img/box.png" alt="Credit: A. Santone" width="100%" />
 <p class="caption">
 Figure 5.5: Credit: A. Santone
@@ -323,6 +388,20 @@ gitbook.start({
 });
 </script>
 
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+  (function () {
+    var script = document.createElement("script");
+    script.type = "text/javascript";
+    var src = "true";
+    if (src === "" || src === "true") src = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML";
+    if (location.protocol !== "file:")
+      if (/^https?:/.test(src))
+        src = src.replace(/^https?:/, '');
+    script.src = src;
+    document.getElementsByTagName("head")[0].appendChild(script);
+  })();
+</script>
 </body>
 
 </html>
