--- a/biobuilder/lm/modules/quantitative-analysis.html
+++ b/biobuilder/lm/modules/quantitative-analysis.html
@@ -394,7 +394,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["synbio.pdf", "synbio.epub"],
+"download": null,
 "toc": {
 "collapse": "subsection"
 }
