--- a/biobuilder/lm/modules/index.html
+++ b/biobuilder/lm/modules/index.html
@@ -290,7 +290,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["synbio.pdf", "synbio.epub"],
+"download": null,
 "toc": {
 "collapse": "subsection"
 }
