--- a/biobuilder/lm/modules/references.html
+++ b/biobuilder/lm/modules/references.html
@@ -291,7 +291,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["synbio.pdf", "synbio.epub"],
+"download": null,
 "toc": {
 "collapse": "subsection"
 }
