--- a/index.html
+++ b/index.html
@@ -393,7 +393,9 @@ Focused my studies on plant biology. Worked with field biologist Daniel Marsh an
 <div id="outreach" class="container">
   <h3 class="text-center">Selected Outreach</h3> 
 
-	
+<p style="text-align:left">Dec 2019 | <b>Curriculum Developer and Presenter</b> | Online / China<br /> 
+In collaboration with the BioBuilder Educational Foundation (BioBuilder.org), developed and presented, to high-school students in China, a series of modules on quantitative analysis for experimental data with a focus on molecular biology. 
+</p>	
 <p style="text-align:left">Dec 2019 | <b>Presenter</b> | SaturPlay!, New York, NY<br /> 
 In collaboration with the MIT pK-12 group and the MIT Club of New York, presented a middle-school lesson fusing climate data investigation, music performance, and didgeridoo construction. 
 </p>	
