--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ Assisted with management of a six-week undergraduate research experience at Kenn
   <h3 class="text-center">Projects</h3> 
 
 <p style="text-align:left"><b>Fountain Pen Ink Analysis & Visualization</b> | Independent Data-driven Quantiative Analysis <br />
-<a href="https://asantone.github.io/ink/" target="_blank">The Goulet Pen Company Ink Analysis</a> represents a quantitative analysis of over 500 fountain pen inks using over 15,000 user-provided reviews from <a href="https://www.gouletpens.com/" target="_blank">The Goulet Pen Company.
+<a href="https://asantone.github.io/ink/" target="_blank">The Goulet Pen Company Ink Analysis</a> represents a quantitative analysis of over 500 fountain pen inks using over 15,000 user-provided reviews from <a href="https://www.gouletpens.com/" target="_blank">The Goulet Pen Company</a>.
 </p>	
 	
 <p style="text-align:left"><b>Modules for 14.310x</b> | Data Analysis for Social Scientists<br /> 
