--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ Focused my studies on plant biology. Worked with field biologist Daniel Marsh an
   <h3 class="text-center">Selected Outreach</h3> 
 
 <p style="text-align:left">April 2020 | <b>Invited Speaker</b> | Online / Global<br /> 
-In collaboration with the <a href="https://jwel.mit.edu/" target="_blank">Abdul Latif Jameel World Education Lab (J-WEL)</a> <a href="https://jwel.mit.edu/j-wel-connections-2020" target="_blank"> <i>J-WEL Connections</i> Series, presented approaches for developing novel, innovative curriculum as part of the <a href="https://pk12.mit.edu/" target="_blank">MIT pk-12 Action Group</a> "Designing Learning Experiences" and "Unpacking Curriculum" programs. 
+In collaboration with the <a href="https://jwel.mit.edu/" target="_blank">Abdul Latif Jameel World Education Lab (J-WEL)</a> <a href="https://jwel.mit.edu/j-wel-connections-2020" target="_blank"> <i>J-WEL Connections</i></a> Series, presented approaches for developing novel, innovative curriculum as part of the <a href="https://pk12.mit.edu/" target="_blank">MIT pk-12 Action Group</a> "Designing Learning Experiences" and "Unpacking Curriculum" programs. 
 </p>
 <p style="text-align:left">March 2020 | <b>Curriculum Developer and Presenter</b> | Online / USA<br /> 
 In collaboration with the <a href="https://biobuilder.org/" target="_blank">BioBuilder Educational Foundation</a>, developed and presented a high-school module on quantitative analysis for the "Bio-Engineering for a Changing World" program. 
