--- a/index.html
+++ b/index.html
@@ -447,7 +447,11 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 <div id="projects" class="container">
   <h3 class="text-center">Projects</h3> 
 
-<p style="text-align:left"><b>Fountain Pen Ink Analysis & Visualization</b> | Independent Data-driven Quantiative Analysis <br />
+<p style="text-align:left"><b>COVID-19 Interactive Visualization</b> | Independent Data-driven Quantitative Analysis <br />
+The interactive <a href="https://sandbox.shinyapps.io/covid19/" target="_blank">COVID-19 Visualization</a> displays confirmed cases and deaths in the United States.
+</p>	
+	
+<p style="text-align:left"><b>Fountain Pen Ink Analysis & Visualization</b> | Independent Data-driven Quantitative Analysis <br />
 <a href="https://asantone.github.io/ink/" target="_blank">The Goulet Pen Company Ink Analysis</a> represents a quantitative analysis of over 500 fountain pen inks using over 15,000 user-provided reviews from <a href="https://www.gouletpens.com/" target="_blank">The Goulet Pen Company</a>.
 </p>	
 	
