--- a/index.html
+++ b/index.html
@@ -450,6 +450,12 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 <p style="text-align:left"><b>COVID-19 Interactive Visualization</b> | Independent Data-driven Quantitative Analysis <br />
 The interactive <a href="https://sandbox.shinyapps.io/covid19/" target="_blank">COVID-19 Visualization</a> displays confirmed cases and deaths in the United States.
 </p>	
+
+<p style="text-align:left"><b>Quantitative Analysis and
+Visualization of Experimental Data</b> | Collaboration with the BioBuilder Educational Foundation <br />
+The <a href="https://asantone.github.io/biobuilder/lm/modules/" target="_blank">Quantitative Analysis and
+Visualization of Experimental Data</a> presentation was developed to introduce a global audience of high school students to principles of quantitative analysis, design considerations, and scientific information with a special focus on COVID-19 data.  
+</p>	
 	
 <p style="text-align:left"><b>Fountain Pen Ink Analysis & Visualization</b> | Independent Data-driven Quantitative Analysis <br />
 <a href="https://asantone.github.io/ink/" target="_blank">The Goulet Pen Company Ink Analysis</a> represents a quantitative analysis of over 500 fountain pen inks using over 15,000 user-provided reviews from <a href="https://www.gouletpens.com/" target="_blank">The Goulet Pen Company</a>.
