--- a/index.html
+++ b/index.html
@@ -454,7 +454,17 @@ The interactive <a href="https://sandbox.shinyapps.io/covid19/" target="_blank">
 <p style="text-align:left"><b>Quantitative Analysis and
 Visualization of Experimental Data</b> | Collaboration with the BioBuilder Educational Foundation <br />
 The <a href="https://asantone.github.io/biobuilder/lm/modules/" target="_blank">Quantitative Analysis and
-Visualization of Experimental Data</a> presentation was developed to introduce a global audience of high school students to principles of quantitative analysis, design considerations, and scientific information with a special focus on COVID-19 data.  
+Visualization of Experimental Data</a> presentation was developed to introduce a global audience of high school students to principles of quantitative analysis, design considerations, and scientific information with a special focus on COVID-19 data.  <br /><br />
+	
+Interactive R Coding Practice:	
+<ul>
+	<li><a href="https://asantone.github.io/biobuilder/lm/modules/interactivePlot.html">Line Plot</a></li>
+	<li><a href="https://asantone.github.io/biobuilder/lm/modules/interactivePlot2.html">Bar Chart</a></li>
+	<li><a href="https://asantone.github.io/biobuilder/lm/modules/interactivePlot3.html">Scatter Plot</a></li>
+	<li><a href="https://asantone.github.io/biobuilder/lm/modules/interactivePlot4.html">Box Plot</a></li>
+</ul>
+	
+	
 </p>	
 	
 <p style="text-align:left"><b>Fountain Pen Ink Analysis & Visualization</b> | Independent Data-driven Quantitative Analysis <br />
