--- a/index.html
+++ b/index.html
@@ -458,10 +458,10 @@ Visualization of Experimental Data</a> presentation was developed to introduce a
 	
 Interactive R Coding Practice:	
 <ul>
-	<li><a href="https://asantone.github.io/biobuilder/lm/modules/interactivePlot.html">Line Plot</a></li>
-	<li><a href="https://asantone.github.io/biobuilder/lm/modules/interactivePlot2.html">Bar Chart</a></li>
-	<li><a href="https://asantone.github.io/biobuilder/lm/modules/interactivePlot3.html">Scatter Plot</a></li>
-	<li><a href="https://asantone.github.io/biobuilder/lm/modules/interactivePlot4.html">Box Plot</a></li>
+	<li><a href="https://asantone.github.io/biobuilder/lm/modules/interactivePlot.html" target="_blank">Line Plot</a></li>
+	<li><a href="https://asantone.github.io/biobuilder/lm/modules/interactivePlot2.html" target="_blank">Bar Chart</a></li>
+	<li><a href="https://asantone.github.io/biobuilder/lm/modules/interactivePlot3.html" target="_blank">Scatter Plot</a></li>
+	<li><a href="https://asantone.github.io/biobuilder/lm/modules/interactivePlot4.html" target="_blank">Box Plot</a></li>
 </ul>
 	
 	
