--- a/index.html
+++ b/index.html
@@ -393,6 +393,9 @@ Focused my studies on plant biology. Worked with field biologist Daniel Marsh an
 <div id="outreach" class="container">
   <h3 class="text-center">Selected Outreach</h3> 
 
+<p style="text-align:left">May 2020 | <b>Invited Speaker</b> | Online / Global<br /> 
+Created video resources collaboration with the <a href="https://fullsteam.mit.edu/" target="_blank">MIT Full STEAM Ahead</a> program and didgeridoo musician Ramin Yazdanpanah. Resources targeted students affected by COVID-19 mobility restrictions.
+</p>
 <p style="text-align:left">April 2020 | <b>Invited Speaker</b> | Online / Global<br /> 
 In collaboration with the <a href="https://jwel.mit.edu/" target="_blank">Abdul Latif Jameel World Education Lab (J-WEL)</a> <a href="https://jwel.mit.edu/j-wel-connections-2020" target="_blank"> <i>J-WEL Connections</i></a> Series, presented approaches for developing novel, innovative curriculum as part of the <a href="https://pk12.mit.edu/" target="_blank">MIT pk-12 Action Group</a> "Designing Learning Experiences" and "Unpacking Curriculum" programs. 
 </p>
@@ -447,6 +450,10 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 <div id="projects" class="container">
   <h3 class="text-center">Projects</h3> 
 
+<p style="text-align:left"><b>Design Philosophy for Scientific Communication</b> | Collaboration with the BioBuilder Educational Foundation <br />
+The <a href="https://asantone.github.io/biobuilder/bcds/index.html" target="_blank">Design Philosophy for Scientific Communication</a> presentation was developed to introduce students to graphics for scientific communication to help them improve their storytelling skills.
+</p>	
+	
 <p style="text-align:left"><b>COVID-19 Interactive Visualization</b> | Independent Data-driven Quantitative Analysis <br />
 The interactive <a href="https://sandbox.shinyapps.io/covid19/" target="_blank">COVID-19 Visualization</a> displays confirmed cases and deaths in the United States.
 </p>	
