--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ Focused my studies on plant biology. Worked with field biologist Daniel Marsh an
   <h3 class="text-center">Selected Outreach</h3> 
 
 <p style="text-align:left">May 2020 | <b>Invited Speaker</b> | Online / Global<br /> 
-Created video resources in collaboration with the <a href="https://fullsteam.mit.edu/" target="_blank">MIT Full STEAM Ahead</a> program and didgeridoo musician Ramin Yazdanpanah of the \href{https://www.mftrio.com/}{Maharajah Flamenco Trio}. Resources targeted students affected by COVID-19 mobility restrictions.
+Created video resources in collaboration with the <a href="https://fullsteam.mit.edu/" target="_blank">MIT Full STEAM Ahead</a> program and didgeridoo musician Ramin Yazdanpanah of the <a href="https://www.mftrio.com/" target="_blank">Maharajah Flamenco Trio</a>. Resources targeted students affected by COVID-19 mobility restrictions.
 </p>
 <p style="text-align:left">April 2020 | <b>Invited Speaker</b> | Online / Global<br /> 
 In collaboration with the <a href="https://jwel.mit.edu/" target="_blank">Abdul Latif Jameel World Education Lab (J-WEL)</a> <a href="https://jwel.mit.edu/j-wel-connections-2020" target="_blank"> <i>J-WEL Connections</i></a> Series, presented approaches for developing novel, innovative curriculum as part of the <a href="https://pk12.mit.edu/" target="_blank">MIT pk-12 Action Group</a> "Designing Learning Experiences" and "Unpacking Curriculum" programs. 
