--- a/index.html
+++ b/index.html
@@ -450,6 +450,10 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 <div id="projects" class="container">
   <h3 class="text-center">Projects</h3> 
 
+<p style="text-align:left"><b>BioBuilder Virtual Bootcamp: Project Design, Computation, and Visualization for Bioengineering </b> | Collaboration with the BioBuilder Educational Foundation <br />
+The <a href="https://asantone.github.io/biobuilder/bootcamp/" target="_blank">Computational Thinking portion of the BioBuilder Virtual Bootcamp</a> program was designed to introduce high school students to data analysis, data visualization, and computational thinking in a bioengineering context while learning about real-world scientific analysis tools.
+</p>	
+	
 <p style="text-align:left"><b>Design Philosophy for Scientific Communication</b> | Collaboration with the BioBuilder Educational Foundation <br />
 The <a href="https://asantone.github.io/biobuilder/bcds/index.html" target="_blank">Design Philosophy for Scientific Communication</a> presentation was developed to introduce students to graphics for scientific communication to help them improve their storytelling skills.
 </p>	
