--- a/index.html
+++ b/index.html
@@ -582,9 +582,6 @@ This video was recorded in a vibration-free darkroom illuminated by special gree
 	
 </div> <!--end outreach container-->
 
-
-
-
 <div id="publications" class="container text-center">
   <h3>Publications</h3>
 	<p style="text-align:left">Dyehouse, M., <b>Santone, A. L.</b>, Kisa, Z., Carr, R. L., and Razzouk, R. (2018). A Novel 3D+MEA Approach to Authentic Engineering Education for Teacher Professional Development: Design Principles and Outcomes. Journal of Pre-College Engineering Education Research (J-PEER): Vol. 9: Iss. 1, Article 4. <a href="https://doi.org/10.7771/2157-9288.1168" target="_blank">https://doi.org/10.7771/2157-9288.1168</a></p>
@@ -602,10 +599,6 @@ This video was recorded in a vibration-free darkroom illuminated by special gree
 </div><!--end Publications container-->		
 
 
-		
-		
-		
-		
 <div id="presentations" class="container text-center">
   <h3>Presentations</h3>
 
@@ -635,6 +628,22 @@ This video was recorded in a vibration-free darkroom illuminated by special gree
 
 </div><!--end Presentations container-->
 
+		
+<div id="projects" class="container">
+  <h3 class="text-center">Fun Stuff</h3>
+  <p style="text-align:left">
+	These are single-mic tracks recorded by 'The Scree' at band practice for fun sometime around 2007-2009. Anne Minus One and Linear Aggression are original works while 
+	  The Lung and Under My Thumb are covers from Dinosaur Jr. and The Rolling Stones, respectively.  Band members: Alex Lipka, Dave Whittinghill, Adam Santone. 
+  </p><br />
+  <p style="text-align:left"><b><a href="../theScree/raw_anneMinusOne.mp3" target="_blank">Anne Minus One [.mp3]</a></b> | Guitar</p>
+  <p style="text-align:left"><b><a href="../theScree/raw_linearAggression.mp3" target="_blank">Linear Aggression [.mp3]</a></b> | Guitar</p>
+  <p style="text-align:left"><b><a href="../theScree/raw_theLung.mp3" target="_blank">The Lung [.mp3]</a></b> | Bass</p>
+  <p style="text-align:left"><b><a href="../theScree/raw_underMyThumb.mp3" target="_blank">Under My Thumb [.mp3]</a></b> | Bass</p>	  
+  	
+</div>		
+		
+		
+		
 <div id="apt" class="container">
   <h3>Available Professional Training</h3>
 		
