--- a/index.html
+++ b/index.html
@@ -635,10 +635,10 @@ This video was recorded in a vibration-free darkroom illuminated by special gree
 	These are single-mic tracks recorded by 'The Scree' at band practice for fun sometime around 2007-2009. Anne Minus One and Linear Aggression are original works while 
 	  The Lung and Under My Thumb are covers from Dinosaur Jr. and The Rolling Stones, respectively.  Band members: Alex Lipka, Dave Whittinghill, Adam Santone. 
   </p><br />
-  <p style="text-align:left"><a href="../theScree/raw_anneMinusOne.mp3" target="_blank">Anne Minus One [.mp3]</a> | Guitar</p>
-  <p style="text-align:left"><a href="../theScree/raw_linearAggression.mp3" target="_blank">Linear Aggression [.mp3]</a> | Guitar</p>
-  <p style="text-align:left"><a href="../theScree/raw_theLung.mp3" target="_blank">The Lung [.mp3]</a> | Bass</p>
-  <p style="text-align:left"><a href="../theScree/raw_underMyThumb.mp3" target="_blank">Under My Thumb [.mp3]</a> | Bass</p>	  
+  <p style="text-align:left"><a href="../theScree/raw_anneMinusOne.mp3" target="_blank">Anne Minus One [.mp3]</a> | Drums: DW; Guitar: AS; Bass & Vocals: AL</p>
+  <p style="text-align:left"><a href="../theScree/raw_linearAggression.mp3" target="_blank">Linear Aggression [.mp3]</a> | Drums: DW; Guitar: AS; Bass & Vocals: AL</p>
+  <p style="text-align:left"><a href="../theScree/raw_theLung.mp3" target="_blank">The Lung [.mp3]</a> | Drums & Vocals: DW; Guitar: AL; Bass: AS</p>
+  <p style="text-align:left"><a href="../theScree/raw_underMyThumb.mp3" target="_blank">Under My Thumb [.mp3]</a> | Drums: DW; Guitar & Vocals: AL; Bass: AS</p>	  
   	
 </div>		
 		
