--- a/index.html
+++ b/index.html
@@ -450,6 +450,10 @@ Assisted with management of a six-week undergraduate research experience at Kenn
 <div id="projects" class="container">
   <h3 class="text-center">Projects</h3> 
 
+<p style="text-align:left"><b>R Package 'rsbp' </b> |  Published on CRAN <br />
+The <a href="https://cran.r-project.org/web/packages/rsbp/index.html" target="_blank">rsbp</a> package allows for easy access to information on biological parts from the <a href="https://igem.org/Main_Page" target="_blank">iGEM</a> <a href="http://parts.igem.org/Main_Page" target="_blank">Registry of Standard Biological Parts</a>. R users can call the function getPart("part name") to retrieve basic part information including DNA sequence, function, and authorship.
+</p>	
+	
 <p style="text-align:left"><b>Project Design, Computation, and Visualization for Bioengineering </b> | Collaboration with the BioBuilder Educational Foundation <br />
 The <a href="https://asantone.github.io/biobuilder/bootcamp/" target="_blank">Computational Thinking portion of the BioBuilder Virtual Bootcamp</a> program was designed to introduce high school students to data analysis, data visualization, and computational thinking in a bioengineering context while learning about real-world scientific analysis tools.
 </p>	
