--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ Assisted with management of a six-week undergraduate research experience at Kenn
   <h3 class="text-center">Projects</h3> 
 
 <p style="text-align:left"><b>R Package 'rsbp' </b> |  Published on CRAN <br />
-The <a href="https://cran.r-project.org/web/packages/rsbp/index.html" target="_blank">rsbp</a> package allows for easy access to information on biological parts from the <a href="https://igem.org/Main_Page" target="_blank">iGEM</a> <a href="http://parts.igem.org/Main_Page" target="_blank">Registry of Standard Biological Parts</a>. R users can call the function getPart("part name") to retrieve basic part information including DNA sequence, function, and authorship.
+The <a href="https://cran.r-project.org/web/packages/rsbp/index.html" target="_blank">rsbp</a> package allows for easy access to information on biological parts from the <a href="https://igem.org/Main_Page" target="_blank">iGEM</a> <a href="http://parts.igem.org/Main_Page" target="_blank">Registry of Standard Biological Parts</a>. R users can call the function getPart("part name") to retrieve basic part information including DNA sequence, function, and authorship. <a href="https://github.com/asantone/rsbp" target="_blank">Demo R code.</a>
 </p>	
 	
 <p style="text-align:left"><b>Project Design, Computation, and Visualization for Bioengineering </b> | Collaboration with the BioBuilder Educational Foundation <br />
