--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ This video was recorded in a vibration-free darkroom illuminated by special gree
 	<p style="text-align:left">Ertmer, P. A., Stepich, D., Flanagan, S., Kocaman-Karoglu, A., Reiner, C., Reyes, L., <b>Santone, A.</b>, and Ushigusa, S. (2009). Impact of Guidance on the Problem-Solving Efforts of Instructional Design Novices. Performance Improvement Quarterly, 21(4), 117-132. <a href="https://doi.org/10.1002/piq.20041" target=_blank">https://doi.org/10.1002/piq.20041</a></p>
 	<p style="text-align:left"><b>Santone, A. L.</b> and McCutcheon, J. A. (2008). <a href="https://learningcenter.nsta.org/resource/?id=10.2505/4/ss08_031_09_55" target="_blank">Node graph visualizations for eighth-grade mathematics students using a virus transmission simulation</a>. Science Scope, 31(9), 55-59.</p>
 	<p style="text-align:left">Chaturvedi, A., Hsieh, C., Bhatt, T., and <b>Santone, A.</b> (2007). <a href="https://link.springer.com/chapter/10.1007/978-3-540-72584-8_145" target="_blank">Bio-terror Preparedness Exercise in a Mixed Reality Environment</a>. International Conference on Computational Science, 1, 1106-1113.</p>
-	<p style="text-align:left"><b>Santone, A. L.</b> (2003). Molecular and structural changes in the hypocotyl elongation zone of mechano-stimulated dark-grown (_Glycine max_ L. Merr. cv. Century 84) seedlings (Master's Thesis). Purdue University, West Lafayette, IN.</p>
+	<p style="text-align:left"><b>Santone, A. L.</b> (2003). Molecular and structural changes in the hypocotyl elongation zone of mechano-stimulated dark-grown (<i>Glycine max</i> L. Merr. cv. Century 84) seedlings (Master's Thesis). Purdue University, West Lafayette, IN.</p>
 </div><!--end Publications container-->
 
 <div id="press" class="container text-center">
