--- a/portfolio.html
+++ b/portfolio.html
@@ -127,6 +127,7 @@ ul.task-list li input[type="checkbox"] {
    
   <ul>
   <li><a href="#technical" id="toc-technical" class="nav-link active" data-scroll-target="#technical">Technical</a></li>
+  <li><a href="#instructional-design" id="toc-instructional-design" class="nav-link" data-scroll-target="#instructional-design">Instructional Design</a></li>
   <li><a href="#biobuilder" id="toc-biobuilder" class="nav-link" data-scroll-target="#biobuilder">BioBuilder</a></li>
   <li><a href="#mit" id="toc-mit" class="nav-link" data-scroll-target="#mit">MIT</a></li>
   <li><a href="#student-work" id="toc-student-work" class="nav-link" data-scroll-target="#student-work">Student Work</a></li>
@@ -164,6 +165,13 @@ ul.task-list li input[type="checkbox"] {
 <p><a href="https://cran.r-project.org/web/packages/rsbp/index.html">R Package ‘rsbp’</a></p>
 <blockquote class="blockquote">
 <p>The rsbp package allows for easy access to information on biological parts from the iGEM Registry of Standard Biological Parts. R users can call the function getPart(“part name”) to retrieve basic part information including DNA sequence, function, and authorship.</p>
+</blockquote>
+</section>
+<section id="instructional-design" class="level3">
+<h3 class="anchored" data-anchor-id="instructional-design">Instructional Design</h3>
+<p><a href="https://asantone.github.io/sketch/courseStructure.html">Course Design Structure Visualization</a></p>
+<blockquote class="blockquote">
+<p>Visual representations of a typical course structure resulting from the ‘backward design’ model of course development.</p>
 </blockquote>
 </section>
 <section id="biobuilder" class="level3">
