--- a/portfolio.html
+++ b/portfolio.html
@@ -128,7 +128,7 @@ ul.task-list li input[type="checkbox"] {
   <ul>
   <li><a href="#technical" id="toc-technical" class="nav-link active" data-scroll-target="#technical">Technical</a></li>
   <li><a href="#instructional-design" id="toc-instructional-design" class="nav-link" data-scroll-target="#instructional-design">Instructional Design</a></li>
-  <li><a href="#biobuilder" id="toc-biobuilder" class="nav-link" data-scroll-target="#biobuilder">BioBuilder</a></li>
+  <li><a href="#biobuilder-and-science-outreach" id="toc-biobuilder-and-science-outreach" class="nav-link" data-scroll-target="#biobuilder-and-science-outreach">BioBuilder and Science Outreach</a></li>
   <li><a href="#mit" id="toc-mit" class="nav-link" data-scroll-target="#mit">MIT</a></li>
   <li><a href="#student-work" id="toc-student-work" class="nav-link" data-scroll-target="#student-work">Student Work</a></li>
   <li><a href="#learning-systems-institute" id="toc-learning-systems-institute" class="nav-link" data-scroll-target="#learning-systems-institute">Learning Systems Institute</a></li>
@@ -174,8 +174,8 @@ ul.task-list li input[type="checkbox"] {
 <p>Visual representations of a typical course structure resulting from the ‘backward design’ model of course development.</p>
 </blockquote>
 </section>
-<section id="biobuilder" class="level3">
-<h3 class="anchored" data-anchor-id="biobuilder">BioBuilder</h3>
+<section id="biobuilder-and-science-outreach" class="level3">
+<h3 class="anchored" data-anchor-id="biobuilder-and-science-outreach">BioBuilder and Science Outreach</h3>
 <p>The following projects were developed for outreach programs with the <a href="https://biobuilder.org/">BioBuilder Educational Foundation</a> (Cambridge, MA).</p>
 <p><a href="https://asantone.github.io/biobuilder/bootcamp/">Project Design, Computation, and Visualization for Bioengineering</a></p>
 <blockquote class="blockquote">
@@ -236,7 +236,7 @@ ul.task-list li input[type="checkbox"] {
 <h3 class="anchored" data-anchor-id="student-work">Student Work</h3>
 <p><a href="https://asantone.github.io/carrarmato/">Vibram Global Locations</a></p>
 <blockquote class="blockquote">
-<p>Used html, d3, javascript, and vector graphics to create a new vision for an informative, interactive map design highlighting locations of Vibram resources globally. Improvements were implemented to update inaccurate locational data, weak user engagement, and overall graphic style. Vibram Global Locations</p>
+<p>Used html, d3, javascript, and vector graphics to create a new vision for an informative, interactive map design highlighting locations of Vibram resources globally. Improvements were implemented to update inaccurate locational data, weak user engagement, and overall graphic style.</p>
 </blockquote>
 <p><a href="https://asantone.github.io/BAMJ/">Pet Statistics</a></p>
 <blockquote class="blockquote">
@@ -247,11 +247,11 @@ ul.task-list li input[type="checkbox"] {
 <h3 class="anchored" data-anchor-id="learning-systems-institute">Learning Systems Institute</h3>
 <p><a href="https://asantone.github.io/eco/">Statistics Analysis through R Code</a></p>
 <blockquote class="blockquote">
-<p>Created instructional statistical analysis code modules for Middle School and High School science teachers to help improve science methodology and educational technology skills. Modules were written in R, a popular statistical analysis language, and were originally posted on (now obsolete) R-fiddle.com, an online editor which allowed for collaborative development and sharing. Statistical Analysis Code Modules</p>
+<p>Created instructional statistical analysis code modules for Middle School and High School science teachers to help improve science methodology and educational technology skills. Modules were written in R, a popular statistical analysis language, and were originally posted on (now obsolete) R-fiddle.com, an online editor which allowed for collaborative development and sharing.</p>
 </blockquote>
 <p><a href="https://mystemkits.com/">CPALMS 3D &amp; MyStemKits</a></p>
 <blockquote class="blockquote">
-<p>Engineer, Concept Artist, Science Advisor, and Curriculum Developer for creating novel and innovative 3D models to be used in K-12 Classrooms. The initial CPALMS 3D program eventually emerged as MyStemKits.com, with whom our FCR-STEM curriculum team partnered to create new products. MyStemKits</p>
+<p>Engineer, Concept Artist, Science Advisor, and Curriculum Developer for creating novel and innovative 3D models to be used in K-12 Classrooms. The initial CPALMS 3D program eventually emerged as MyStemKits.com, with whom our FCR-STEM curriculum team partnered to create new products.</p>
 </blockquote>
 <p><a href="https://www.cpalms.org/Public/ResourceCollectioncategory/Preview/42">CPALMS Perspectives</a></p>
 <blockquote class="blockquote">
